src/objects/Community_Involvement__c.object
<CustomObject>
    <description>Contains planned and completed community activities such as donation of time and money, donating professional services, and otherwise supporting the community at large.</description>
    <fields>
        <fullName>AECOM_Equipment_Facilities_Used__c</fullName>
        <inlineHelpText>Enter any AECOM assets used</inlineHelpText>
        <label>AECOM Equipment/Facilities Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_Geography__c</fullName>
        <inlineHelpText>Enter AECOM Geography primarily responsible for the event or activity</inlineHelpText>
        <label>AECOM Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOM_Region__c</fullName>
        <inlineHelpText>Enter AECOM Region primarily responsible for the event or activity</inlineHelpText>
        <label>AECOM Region</label>
        <picklist>
            <picklistValues>
                <fullName>CAN - East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US - West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>AECOM_Role__c</fullName>
        <inlineHelpText>e.g., sponsor, participant</inlineHelpText>
        <label>AECOM Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AECOM_SponsorUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select an AECOM Sponsor</description>
        <inlineHelpText>Select an AECOM Sponsor</inlineHelpText>
        <label>AECOM Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Community_Involvement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AECOM_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select person who is the primary champion at AECOM.</inlineHelpText>
        <label>AECOM Sponsor</label>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>Community Involvement</relationshipLabel>
        <relationshipName>Community_Involvement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Contact_Person_email__c</fullName>
        <formula>Account_Contact__r.Email</formula>
        <inlineHelpText>Inherited from Contact record. If blank, first save this record, then click on the Account Contact name to open the Contact record. Enter the email there, and save.</inlineHelpText>
        <label>Account Contact Person email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Link to the Contact record of the person we worked with. If person is not found, he or she can be added from the Account or from the Contact tab.</inlineHelpText>
        <label>Account Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Involvement</relationshipLabel>
        <relationshipName>Community_Involvement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_City__c</fullName>
        <description>Address (or close by) of location of the event</description>
        <inlineHelpText>Enter city (or nearby community) of the event</inlineHelpText>
        <label>Activity City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Country where event took place</description>
        <inlineHelpText>Entry country where event took place</inlineHelpText>
        <label>Activity Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Community Involvement</relationshipLabel>
        <relationshipName>Community_Involvement</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <inlineHelpText>Describe event in 60 to 75 words. Include benefits and impacts to the event sponsor and community. Post event, provide results, e.g., 100 cans of food donated, $500  raised, 10 bags of trash collected, 100 hours volunteered.</inlineHelpText>
        <label>Activity Description and Accomplishments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Event_Category__c</fullName>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Activity/Event Category</label>
        <picklist>
            <picklistValues>
                <fullName>Employee Community Activity/Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Employee Engagement Activity/Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Short_Description__c</fullName>
        <inlineHelpText>One sentence high-level description (longer description can be entered in the next field)</inlineHelpText>
        <label>Activity Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_State_Province_Emirate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the appropriate state or province.</inlineHelpText>
        <label>Activity State/Province/Emirate</label>
        <referenceTo>State_Province_Emirate__c</referenceTo>
        <relationshipLabel>Community Involvement</relationshipLabel>
        <relationshipName>Community_Involvement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Street_Address__c</fullName>
        <description>Address (or close by) of location of the event</description>
        <inlineHelpText>Enter the street address (or nearby location) of the event</inlineHelpText>
        <label>Activity Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_notes__c</fullName>
        <label>Additional notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approx_amount_raised_by_AECOM__c</fullName>
        <inlineHelpText>Enter amount raised. Change currency if necessary</inlineHelpText>
        <label>Approx amount raised by AECOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Line_s_Involved__c</fullName>
        <inlineHelpText>Select one or more</inlineHelpText>
        <label>Business Line(s) Involved</label>
        <picklist>
            <picklistValues>
                <fullName>Buildings &amp; Places</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Community_Involvement_ID__c</fullName>
        <description>System-generated number used as the ID</description>
        <displayFormat>CI-{000000}</displayFormat>
        <inlineHelpText>System-generated number used as a unique ID</inlineHelpText>
        <label>Community Involvement ID#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Account_Contact__r.Account.Street__c + &apos;, &apos; + Account_Contact__r.Account.City__c + &apos;, &apos; +    Account_Contact__r.Account.State_Province_Emerate__r.Name  + &apos;, &apos; +  
Account_Contact__r.Account.Zip__c  + &apos;, &apos; +  Account_Contact__r.Account.State_Province_Emerate__r.Country__r.Name</formula>
        <inlineHelpText>Contract address as recorded on the Salesforce Account record. To correct, open Account record.</inlineHelpText>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Account_Contact__r.Phone</formula>
        <inlineHelpText>Telephone number from Contact record. To correct, open the contact.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Social_Responsibility_Category__c</fullName>
        <inlineHelpText>Select one</inlineHelpText>
        <label>Corporate Social Responsibility Category</label>
        <picklist>
            <picklistValues>
                <fullName>Level One - AECOM Charitable Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level Two - AECOM Sponsorship Funding Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level Three - Professional Services Pro-Bono Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor_Notes__c</fullName>
        <inlineHelpText>Enter additional information about the sponsor or approvals</inlineHelpText>
        <label>Event Sponsor Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor_Organization_Type__c</fullName>
        <formula>TEXT (Account_Contact__r.Account.Client_Group__c) + &apos; - &apos; + TEXT ( Account_Contact__r.Account.Client_Subgroup__c)</formula>
        <inlineHelpText>Account type from Account record</inlineHelpText>
        <label>Event Sponsor Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <formula>Account_Contact__r.Account.Account_Name_for_Labels__c</formula>
        <inlineHelpText>This is the Salesforce account associated with the event contact.</inlineHelpText>
        <label>Event Sponsor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>Date of event, or first day of a multi-day event</description>
        <inlineHelpText>Enter or select the date of event, or first day of a multi-day event</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Use_Approval_Date__c</fullName>
        <inlineHelpText>Date organization approved AECOM&apos;s use of this event in external communications</inlineHelpText>
        <label>External Use Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_use_approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of person at sponsoring organizaton who approved AECOM&apos;s use of this event in external communications</inlineHelpText>
        <label>External use approved by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Event Approver</relationshipLabel>
        <relationshipName>Community_Involvement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geolocation_of_Event__c</fullName>
        <label>Geolocation of Event</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Link_to_Flyer_or_Graphics__c</fullName>
        <inlineHelpText>Enter url of document or folder of documents - make sure they are in a location accessible to all AECOM staff, such as MediaBank.</inlineHelpText>
        <label>Link to Flyer or Graphics</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Photo_folder__c</fullName>
        <inlineHelpText>Enter url of photo or folder of photos - make sure they are in a location accessible to all AECOM staff, such as MediaBank.</inlineHelpText>
        <label>Link to Photo folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Video__c</fullName>
        <inlineHelpText>Enter url of video or folder of videos - make sure they are in a location accessible to all AECOM staff, such as MediaBank.</inlineHelpText>
        <label>Link to Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_event_web_site__c</fullName>
        <inlineHelpText>Copy and paste the url for the event&apos;s public web site, if any.</inlineHelpText>
        <label>Link to event web site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Note_to_User__c</fullName>
        <inlineHelpText>Information the user needs to know before using this document</inlineHelpText>
        <label>Note to User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_AECOM_Participants__c</fullName>
        <inlineHelpText>How many AECOM employees were involved? Names can be entered in the related list at the top of this page, AFTER saving this record.</inlineHelpText>
        <label>Number of AECOM Participants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_s_Participating__c</fullName>
        <inlineHelpText>Enter AECOM offices participating in the event</inlineHelpText>
        <label>Office(s) Participating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Description_of_Purpose__c</fullName>
        <inlineHelpText>Enter one sentence.</inlineHelpText>
        <label>Organization Description of Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_bono_hours_worked__c</fullName>
        <inlineHelpText>For Level Three, enter total hours worked by AECOM staff</inlineHelpText>
        <label>Pro-bono hours worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sponsor_Approves_External_Communication__c</fullName>
        <inlineHelpText>Has the sponsor organization approved of AECOM&apos;s use for external communications?</inlineHelpText>
        <label>Sponsor Approves External Communication?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_amount_provided__c</fullName>
        <inlineHelpText>Total AECOM sponsorship amount provided (check currency field)</inlineHelpText>
        <label>Sponsorship amount provided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_implementation_hours_volunteer__c</fullName>
        <inlineHelpText>Enter approimate total implementation hours volunteered by AECOM staff.</inlineHelpText>
        <label># of implementation hours volunteer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Community Involvement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Community Involvement Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Involvement</pluralLabel>
    <recordTypes>
        <fullName>Community_Involvement</fullName>
        <active>true</active>
        <label>Community Involvement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>